This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: VersionInfo string is corrupted when building on Windows with DBCS or UTF-8 locale
Type: behavior Stage: resolved
Components: Windows Versions: Python 3.10, Python 3.9, Python 3.8
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: steve.dower Nosy List: miss-islington, nnemkin, paul.moore, steve.dower, tim.golden, zach.ware
Priority: normal Keywords: patch

Created on 2020-06-19 15:18 by nnemkin, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 20985 merged nnemkin, 2020-06-19 15:22
PR 21122 merged miss-islington, 2020-06-24 16:27
PR 21123 merged miss-islington, 2020-06-24 16:28
Messages (4)
msg371888 - (view) Author: Nikita Nemkin (nnemkin) * Date: 2020-06-19 15:18
In absence of explicit declaration, resource compiler uses system
codepage. When this codepage is DBCS or UTF-8, Python's copyright
string is corrupted, because it contains copyright sign encoded
as \xA9.
    
The fix is to explicitly declare codepage 1252.

Another possible fix is to use codepage 65001, but that will require replacing \xA9 with an actual ©, because it seems impossible to escape unicode characters in VersionInfo strings.
msg372257 - (view) Author: Steve Dower (steve.dower) * (Python committer) Date: 2020-06-24 16:27
New changeset 33b79b11b891adea5a916df8e3779505b37aabe7 by Nikita Nemkin in branch 'master':
bpo-41038: Fix non-ASCII string corruption in Win32 resource files (GH-20985)
https://github.com/python/cpython/commit/33b79b11b891adea5a916df8e3779505b37aabe7
msg372258 - (view) Author: miss-islington (miss-islington) Date: 2020-06-24 16:42
New changeset fb4a6241054ad6b7f24d1b32af6827e02936d568 by Miss Islington (bot) in branch '3.8':
bpo-41038: Fix non-ASCII string corruption in Win32 resource files (GH-20985)
https://github.com/python/cpython/commit/fb4a6241054ad6b7f24d1b32af6827e02936d568
msg372263 - (view) Author: miss-islington (miss-islington) Date: 2020-06-24 16:47
New changeset 153e20e087577553ad92a4c802c71d96244e508e by Miss Islington (bot) in branch '3.9':
bpo-41038: Fix non-ASCII string corruption in Win32 resource files (GH-20985)
https://github.com/python/cpython/commit/153e20e087577553ad92a4c802c71d96244e508e
History
Date User Action Args
2022-04-11 14:59:32adminsetgithub: 85210
2020-06-24 16:47:48miss-islingtonsetmessages: + msg372263
2020-06-24 16:42:59miss-islingtonsetmessages: + msg372258
2020-06-24 16:29:08steve.dowersetstatus: open -> closed
assignee: steve.dower
resolution: fixed
stage: patch review -> resolved
2020-06-24 16:28:02miss-islingtonsetpull_requests: + pull_request20286
2020-06-24 16:27:55miss-islingtonsetnosy: + miss-islington
pull_requests: + pull_request20285
2020-06-24 16:27:52steve.dowersetmessages: + msg372257
2020-06-19 15:22:22nnemkinsetkeywords: + patch
stage: patch review
pull_requests: + pull_request20159
2020-06-19 15:18:28nnemkincreate